--- a/ajaxCall.html
+++ b/ajaxCall.html
@@ -9,7 +9,35 @@
     <style type="text/css">
         body {
             font-family: sans-serif;
+        }
 
+        .ajax-container {
+            width: 50%;
+            margin: 50px auto;
+        }
+
+        #btnAjaxCall {
+            height: 50px;
+            width: 120px;
+            border: none;
+            border-radius: 6px;
+            color: white;
+            background: #3498db;
+            outline: none;
+            font-size: 22px;
+            opacity: 0.7;
+            padding: 10px;
+        }
+
+        #btnAjaxCall:hover {
+            cursor: pointer;
+            opacity: 1;
+        }
+
+        .item-details {
+            margin-top: 10px;
+            border: 1px solid #ddd;
+            padding: 6px;
         }
     </style>
 </head>
@@ -24,6 +52,6 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script>
-    
 </script>
+
 </html>
